--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "angular-calendar": "^0.21.3",
     "angular2-drag-scroll": "^1.4.4",
+    "angularx-flatpickr": "^4.0.0",
     "core-js": "^2.4.1",
+    "flatpickr": "^4.0.7",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
