--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@angular/router": "^4.2.4",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "angular-calendar": "^0.21.3",
-    "angular2-drag-scroll": "^1.4.4",
-    "angularx-flatpickr": "^4.0.0",
+    "angular2-drag-scroll": "^1.5.0",
+    "angularx-flatpickr": "^4.0.1",
+    "autopulous-angular2-soap": "^0.4.7",
     "core-js": "^2.4.1",
-    "flatpickr": "^4.0.7",
+    "flatpickr": "^4.1.0",
+    "jquery.soap": "^1.6.9",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
@@ -37,7 +39,7 @@
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.91",
     "codelyzer": "~3.2.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
