--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "core-js": "^2.4.1",
     "flatpickr": "^4.1.0",
     "jquery.soap": "^1.6.9",
+    "ng2-datepicker-bootstrap": "^1.0.0",
+    "ngx-slick": "^0.1.3",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
